CHANGES.txt - 05/08/2002
------------------------

CHANGES IN CUPS V1.2.0a1

	- Now support custom attributes and extended options in
	  PPD files.
	- Now provide functions to save PPD files.
	- New policy mechanism allows per-operation and
	  per-printer control over what users and groups are
	  allowed to do various IPP operations.
	- New error policy mechanism to control how aborted
	  backend errors are handled by the scheduler
	  (abort-job, retry-job, requeue-job, stop-printer)
	- Updated the printer test page with a better color
	  wheel and a separate grayscale ramp.
	- A single backend process is now run to send all print
	  data for a job.
	- Backends and filters can now send and receive
	  backchannel data over file descriptor 3.
	- Updated the raster stream format to support more
	  user-defined attributes and to do compression of the
	  page data.
	- New ippReadFile(), ippReadIO(), ippWriteFile(), and
	  ippWriteIO() functions in CUPS API.
	- Added Cookie, Expect, and Set-Cookie fields to HTTP
	  request structure.