@@ -1,8 +1,10 @@
-CHANGES.txt - 05/08/2002
+CHANGES.txt - 06/05/2002
 ------------------------
 
 CHANGES IN CUPS V1.2.0a1
 
+	- New cupsLangPrintf() and cupsLangPuts() for localized
+	  interfaces.
 	- Now support custom attributes and extended options in
 	  PPD files.
 	- Now provide functions to save PPD files.
